--- a/_layouts/posts.html
+++ b/_layouts/posts.html
@@ -2,50 +2,37 @@
 layout: default
 ---
 
-<div post="{{ page.serial }}" class="container post-content">
-    <div class="row">
-        <div class="col-md-10 col-xs-12">
-            <h1>{{ page.title }}</h1>
-        	<h2>{{ page.meta }}</h2>
-        	<p class="content-date"><strong>{{ page.date | date: "%B %d, %Y" }}</strong></p>
-            {{ content }}
-        </div>
-        <nav class="col-md-2 hidden-sm hidden-xs" id="reference-navigation" role="navigation">
-            <ul id="reference-nav">
-                <p>Quick Nav</p>
-            </ul>
-        </nav>
+<div class="container post-container" post-serial="{{ page.serial }}">
+
+    <h1 class="text-center post-title">{{ page.title }}</h1>
+    <h3 class="text-center post-meta">{{ page.meta }}</h3>
+    <p class="content-date">{{ page.date | date: "%B %d, %Y" }}</p>
+    <div class="post-content">
+        {{ content }}
     </div>
-</div>
 
-{% if page.comments %}
-<div class="container-fluid">
-    <div class="col-xs-12">
-        <div class="container-fluid comments" style="margin: 0 auto;">
-            <div class="fb-comments" data-href="https://ankan17.github.io/learncwithme{{ page.url }}" data-numposts="5"></div>
-        </div>
+    <!-- Facebook comments -->
+    {% if page.comments %}
+    <div class="comments">
+        <div class="fb-comments" data-href="http://ankan17.github.io{{ site.baseurl }}{{ page.url }}" data-numposts="5" data-width="100%"></div>
     </div>
-</div>
-{% endif %}
+    {% endif %}
 
-<div class="container navigation">
-    	{% if page.previous.url and page.previous.category != "practice" %}
-      	<a class="btn btn-danger btn-lg" href="{{ site.baseurl }}{{ page.previous.url }}">
-    	  	<span class="glyphicon glyphicon glyphicon-menu-left" aria-hidden="true"></span>Previous<span class="hidden-xs">: {{ page.previous.title }}</span>
-        </a>
+    <!-- Pagination links -->
+    <div class="pagination">
 
-        {% if page.link %}<a class="btn btn-primary btn-lg" href="{{ page.link }}"> Download<span class="hidden-xs"> as Pdf </span></a>
-        {% endif %}
-
-      	{% else %}
-        {% if page.link %}<a class="btn btn-primary btn-lg" href="{{ page.link }}"> Download<span class="hidden-xs"> as Pdf </span> </a>
-        {% endif %}
-
+        {% if page.previous.url %}
+            <a class="pagination-item previous" href="{{ site.baseurl }}{{ page.previous.url }}">Previous</a>
+        {% else %}
+            <span class="pagination-item previous">Previous</span>
         {% endif %}
 
         {% if page.next.url %}
-        <a class="btn btn-success btn-lg" href="{{ site.baseurl }}{{ page.next.url }}">
-      		Next<span class="hidden-xs">: {{ page.next.title }} </span><span class="glyphicon glyphicon glyphicon-menu-right align-right" aria-hidden="true"></span>
-        </a>
+            <a class="pagination-item next" href="{{ site.baseurl }}{{ page.next.url }}">Next</a>
+        {% else %}
+            <span class="pagination-item next">Next</span>
         {% endif %}
+
+    </div>
+
 </div>
