Modify the footer links and spacing

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -10,22 +10,22 @@
                 <p class="text-center">Connect with Me</p>
                 <ul class="social-icons">
                     <li>
-                        <a class="btn" href="https://www.facebook.com/friendyankan"><span class="fa fa-facebook-square fa-lg"></span> Facebook </a>
+                        <a target="_blank" class="btn" href="https://www.facebook.com/ankan17"><span class="fa fa-facebook-square fa-lg"></span> Facebook </a>
                     </li>
                     <li>
-                        <a class="btn" href="https://plus.google.com/u/0/101331497280009937677"><span class="fa fa-google-plus-square fa-lg"></span> Google+ </a>
+                        <a target="_blank" class="btn" href="https://www.linkedin.com/in/ankan-poddar-86a6b6163/"><span class="fa fa-linkedin-square fa-lg"></span> LinkedIn </a>
                     </li>
                     <li>
-                        <a class="btn" href="https://www.github.com/ankan17"><span class="fa fa-github fa-lg"></span> Github </a>
+                        <a target="_blank" class="btn" href="https://www.github.com/ankan17"><span class="fa fa-github fa-lg"></span> Github </a>
                     </li>
                     <li>
-                        <a class="btn" href="https://www.quora.com/profile/Ankan-Poddar"><span class="fa fa-quora fa-lg"></span> Quora </a>
+                        <a target="_blank" class="btn" href="https://twitter.com/PoddarAnkan"><span class="fa fa-twitter fa-lg"></span> Twitter </a>
                     </li>
                 </ul>
             </div>
             <div class="col-md-5">
                 <p> Have any query, suggestion, complaint or complement? Feel free to drop a few words at </p>
-                <a> apoddar1701@gmail.com </a>
+                <a href="mailto:apoddar1701@gmail.com"> apoddar1701@gmail.com </a>
                 <p> Copyright &copy; {{ site.time | date: '%Y' }} by Ankan Poddar<br />
                     All Rights Reserved </p>
             </div>
