Add Google AdSense

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -37,6 +37,15 @@
         <!-- Font -->
         <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
 
+        <!-- Google AdSense -->
+        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+        <script>
+          (adsbygoogle = window.adsbygoogle || []).push({
+            google_ad_client: "ca-pub-6895348259822190",
+            enable_page_level_ads: true
+          });
+        </script>
+
     </head>
 
     <body>
