Modify post layout

--- a/_layouts/daily_problems.html
+++ b/_layouts/daily_problems.html
@@ -9,6 +9,10 @@ layout: default
     <div class="post-content">
       <input type="hidden" name="tag" value="{{ page.label }}" />
       {{ content }}
+      <p><strong>PS:</strong> Subscribe to
+        <a href="https://www.dailycodingproblem.com/" target="_blank">Daily Coding Problems</a>
+        for more fun problems.
+      <p>
     </div>
 
     <!-- Facebook comments -->
